# HiSH

./: .gitignore  .gitmodules  CLAUDE.md  README.md  README_CN.md  README_EN.md  oh-package-lock.json5  oh-package.json5  optimizing-tag.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/guide/: 01_Linux_Shell.md  02_APK.md  08_Docker.md  Z1_Jit.md  to_html.txt
entry/: .gitignore  build-profile.json5  oh-package.json5
entry/libs/arm64-v82/: libslirp.so.0
entry/libs/arm64-v8a/: libslirp.so.0
entry/libs/x86_64/: libslirp.so.0
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  napi_vnc.cpp  qemu_childprocess.cpp  qemu_runner.cpp  utils.cpp  vnc_client.cpp  vnc_renderer.cpp  vnc_viewer.cpp
entry/src/main/cpp/include/: napi_vnc.hpp  utils.hpp  vnc_client.hpp  vnc_renderer.hpp  vnc_viewer.hpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/components/: DataDiskManagementContent.ets  EditEmulatorContent.ets  EmulatorItem.ets  EmulatorListGrid.ets  EmulatorManagement.ets  EmulatorManagementContent.ets  ImageManagementContent.ets  LinkItem.ets  NativeVncViewer.ets  OpenSourceContent.ets  PortMappingContent.ets  PortMappingEdit.ets  PowerManagementContent.ets  QemuMonitor.ets  ReactiveGrid.ets  RepeatGrid.ets  RootfsManagementContent.ets  SettingsBase.ets  SettingsContent.ets  SharedFolderContent.ets  SimpleWebView.ets  SnippetsPanel.ets  ToolBox.ets  UserGuide.ets  VmStatusBar.ets  WebTerminal.ets
entry/src/main/ets/components/toolbox/: Base64EncodeContent.ets  DnsResolveContent.ets  HashGenerateContent.ets  HashVerifyContent.ets  HttpRequestContent.ets  PingContent.ets  PortScannerContent.ets  RegexVerifyContent.ets  UrlEncodeContent.ets
entry/src/main/ets/entryability/: EntryAbility.ets  ToolboxAbility.ets
entry/src/main/ets/lib/: AsyncLock.ets  QemuAgent.ets  QemuAgentManager.ets  QmpClient.ets  QmpEventListener.ets  SessionManager.ets  UnixSocketSession.ets  VmController.ets  autoSnapshot.ets  backgroundRunningManager.ets  codeEscape.ets  copyFile.ets  copyToClipboard.ets  deleteDirectoryRecursive.ets  readQcow2VirtualSize.ets  serialChannel.ets  shellChannel.ets  startVm.ets  stringToArrayBuffer.ets  terminalVirtualKeys.ets
entry/src/main/ets/model/: Emulator.ets  appOption.ets  vmOption.ets
entry/src/main/ets/pages/: DataDiskManagementPage.ets  EditEmulator.ets  GuideWebPage.ets  Index.ets  LauncherPage.ets  NativeVncPage.ets  RootfsManagement.ets  SettingsPage.ets  SharedFolder.ets  ToolboxPage.ets  UserGuidePage.ets  VncPage.ets
entry/src/main/ets/pages/toolbox/: Base64EncodePage.ets  DnsResolvePage.ets  HashGeneratePage.ets  HashVerifyPage.ets  HttpRequestPage.ets  PortScannerPage.ets  RegexVerifyPage.ets  UrlEncodePage.ets
entry/src/main/ets/utils/: ImageTasks.ets  KeyMap.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/guide/: 01_Linux_Shell.html  08_Docker.html  Z1_Jit.html
entry/src/main/resources/rawfile/novnc/: matrix.js  vnc.html
entry/src/main/resources/rawfile/novnc/app/: ui.js
entry/src/main/resources/rawfile/novnc/app/styles/: base.css
entry/src/main/resources/rawfile/novnc/core/: rfb.js
entry/src/main/resources/rawfile/pages/: license.html  osl.html
entry/src/main/resources/rawfile/term/: fonts.css  hterm_all.js  term.css  term.html  term.js
entry/src/main/resources/rawfile/term/fonts/: LICENSE.txt
entry/src/main/resources/zh_CN/element/: string.json
entry/src/test/: LocalUnit.test.ets
media/: background.psd  devices.psd  hish.psd  startIcon.psd
